<resources>
    <string name="app_name">KTRoutePlay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_vector_image">Welcome vector image</string>
    <string name="track_and_view_your_location_effortlessly">Track and View your location effortlessly</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign up</string>
    <string name="back_button">Back Button</string>
    <string name="signup_image">sign up image</string>
    <string name="sign_with_email">Sign up with your Email</string>
    <string name="receive_otp_warn">You will receive a 4 digit OTP on this Email to verify next</string>
    <string name="dialpad_icon">dialpad icon</string>
    <string name="user_email_id">Email ID</string>
    <string name="send_otp">Send OTP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_your_credentials">Login with your credentials</string>
    <string name="login_otp_warn">You will receive a 4 digit OTP on your registered Email ID to verify next</string>
    <string name="otp_image">OTP Image</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp_sent_to_mail">Enter the 4 digit OTP sent to your Email ID\n</string>
    <string name="_0">0</string>
    <string name="didn_t_receive_any_otp">Didn’t receive any OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_is">OTP is :</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="username_is_mandatory">Username is mandatory</string>
    <string name="password_is_mandatory">Password is mandatory</string>
    <string name="enter_password_again_to_continue">Enter password again to continue</string>
    <string name="logout">Logout</string>
    <string name="location_pin">location pin</string>
    <string name="location_log">%s\'s Location Log</string>
    <string name="play_back">play back</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
</resources>