<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignupFragment">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back_button"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:tint = "?attr/colorAccent"
        android:src="@drawable/ic_arrow_back"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back_arrow"
        android:contentDescription="@string/sign_up"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/signupImage"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/signup_image"
                android:src="@drawable/img_signup_illustration" />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signupImage"
                android:text="@string/sign_with_email"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/app_grey"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/titleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/receive_otp_warn"
                android:textColor="@color/app_grey"
                android:textSize="16sp" />
            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignStart="@id/titleDesc"
                android:layout_alignEnd="@id/titleDesc"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:id="@+id/email_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_blue_tlbll"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/dialpad_icon"
                        android:src="@drawable/ic_mail"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7.3dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:hint="@string/user_email_id"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@drawable/bg_blue_outlined_tbr"
                    android:layout_toEndOf="@id/email_ic"
                    app:drawableEndCompat="@drawable/ic_cancel_rounded"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />
                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_alignStart="@id/email_ic"
                    android:layout_below="@id/userEmail"
                    app:drawableStartCompat="@drawable/ic_error" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignStart="@id/titleDesc"
                android:layout_alignEnd="@id/titleDesc"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:id="@+id/username_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_blue_tlbll"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/dialpad_icon"
                        android:src="@drawable/ic_username"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7.3dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:hint="@string/username"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@drawable/bg_blue_outlined_tbr"
                    android:layout_toEndOf="@id/username_ic"
                    app:drawableEndCompat="@drawable/ic_cancel_rounded"
                    android:autofillHints="username"
                    android:inputType="text" />
                <TextView
                    android:id="@+id/username_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_alignStart="@id/username_ic"
                    android:layout_below="@id/userName"
                    app:drawableStartCompat="@drawable/ic_error" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignStart="@id/titleDesc"
                android:layout_alignEnd="@id/titleDesc"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:id="@+id/password_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_blue_tlbll"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/dialpad_icon"
                        android:src="@drawable/ic_lock"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7.3dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:hint="@string/password"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@drawable/bg_blue_outlined_tbr"
                    android:layout_toEndOf="@id/password_ic"
                    app:drawableEndCompat="@drawable/ic_visible"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
                <TextView
                    android:id="@+id/password_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_alignStart="@id/password_ic"
                    android:layout_below="@id/password"
                    app:drawableStartCompat="@drawable/ic_error" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignStart="@id/titleDesc"
                android:layout_alignEnd="@id/titleDesc"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:id="@+id/confirm_password_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_blue_tlbll"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/dialpad_icon"
                        android:src="@drawable/ic_lock"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7.3dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:background="@drawable/bg_blue_outlined_tbr"
                    android:layout_toEndOf="@id/confirm_password_ic"
                    app:drawableEndCompat="@drawable/ic_visible"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
                <TextView
                    android:id="@+id/confirm_password_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_alignStart="@id/confirm_password_ic"
                    android:layout_below="@id/confirm_password"
                    app:drawableStartCompat="@drawable/ic_error" />
            </RelativeLayout>
            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/app_blue"
                android:layout_alignStart="@id/email_layout"
                android:layout_alignEnd="@id/email_layout"
                android:text="@string/send_otp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/confirm_password_layout" />
            <LinearLayout
                android:id="@+id/login_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_button"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp">
                <TextView
                    android:id="@+id/already_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/app_blue"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>