<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_blue"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/back_button"
            android:layout_alignBottom="@id/title"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            app:tint = "@color/white"
            android:src="@drawable/ic_arrow_back"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="User's Location Log"/>
        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAlignment="viewEnd"
            android:layout_toEndOf="@id/title"
            android:text="12:00 AM"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:layout_alignTop="@id/title"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"/>
        <LinearLayout
            android:id="@+id/lt_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/half_white"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/half_white"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lng_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lt_layout"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/half_white"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/half_white"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </RelativeLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        tools:context=".fragments.MapsFragment" />
    <ImageButton
        android:id="@+id/playBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:elevation="4dp"
        android:backgroundTint="@color/app_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_playback"
        app:tint = "@color/half_white"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/play_back" />

</RelativeLayout>
